color contrast fix

--- a/src/DetailsView/components/base-left-nav.scss
+++ b/src/DetailsView/components/base-left-nav.scss
@@ -23,6 +23,12 @@
                 a,
                 button {
                     background-color: $nav-link-selected !important;
+
+                    @media (forced-colors: active) {
+                        forced-color-adjust: none;
+             
+                        background-color: Highlight !important;
+                    }
                 }
             }
 
@@ -36,6 +42,11 @@
             a,
             button {
                 background-color: $nav-link-hover;
+
+                @media (forced-colors: active) {
+                    forced-color-adjust: none;
+                    border: 2px solid Highlight !important;
+                }
             }
         }
     }
