--- a/src/DetailsView/components/left-nav/common-left-nav-link.scss
+++ b/src/DetailsView/components/left-nav/common-left-nav-link.scss
@@ -17,6 +17,19 @@
         color: $always-black;
     }
 
+    @media (forced-colors: active) {
+        :global(.is-selected) & {
+            forced-color-adjust: none;
+            color: HighlightText;
+        }
+
+        :global(.ms-Nav-compositeLink):hover & {
+            forced-color-adjust: none;
+          color: HighlightText !important;
+          
+        }
+    }
+
     .link-icon {
         font-size: 24px;
     }
